# rt-api

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  README.md  manage.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-api.yml
apps/common/: views.py
apps/core/: middleware.py
apps/core/management/commands/: seed_local_tenant.py
apps/rt/: apps.py  models.py  search.py  serializers.py  views.py
db/: create-rt-database.sql
docs/: codex-prompts.md  sprint-1-demo-script.md  sprint-1-known-issues.md  sprint-1-review.md
docs/plans/sprint-2/: api-full-request-lifecycle-execplan.md
docs/plans/sprint-3/: api-admin-configuration-execplan.md
rt_api/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_auth_public.py  test_comments.py  test_health.py  test_request_create.py  test_request_detail.py  test_search.py  test_uploads.py
